testing/Travis/testcases/TypeChecker/shouldFail/IntersectionTypeMismatch.adl
CONTEXT IntersectionTypeMismatchCheck IN ENGLISH

PURPOSE CONTEXT IntersectionTypeMismatchCheck
{+ This test must fail because intersection requires both operands to have the same signature. +}

RELATION r[A*B]
RELATION s[B*C]
RELATION result[A*C]

RULE testIntersectionFail: result = r /\ s

ENDCONTEXT
